update case study

--- a/case-study-main.html
+++ b/case-study-main.html
@@ -529,12 +529,248 @@
                                         </div>
                                     </div>
 
+                                    <!-- Velicham Halwa Kadai  -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Velicham-Halwa-Kadai.html">
+                                                    <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Velicham-Halwa-Kadai.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Velicham-Halwa-Kadai.html">
+                                                        Velicham Halwa Kadai </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <!-- Uthaiyaisilan Magician  -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/uthaiyaisilan-magician .html">
+                                                    <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/uthaiyaisilan-magician .html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/uthaiyaisilan-magician .html">
+                                                        Uthaiyaisilan Magician </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- GVS Engineers and Consultants -->
+
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/GVS-Engineers-and-Consultants .html .html">
+                                                    <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/GVS-Engineers-and-Consultants .html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/GVS-Engineers-and-Consultants .html">
+                                                        GVS Engineers and Consultants </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Indian Music Therapy Ragas -->
+                                    
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Indian-music-therapy-ragas.html">
+                                                    <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Indian-music-therapy-ragas.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Indian-music-therapy-ragas.html">
+                                                        Indian Music Therapy Ragas </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Nattuvangam Courses -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/nattuvangam-courses.html">
+                                                    <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/nattuvangam-courses.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/nattuvangam-courses.html">
+                                                        Nattuvangam Courses </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Fashonli  -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Fashonli .html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Fashonli .html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Fashonli .html">
+                                                        Fashonli  </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Tenbitz -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Tenbitz.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Tenbitz.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Tenbitz.html">
+                                                        Tenbitz   </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Wateraid Pumps -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Wateraid-pumps.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Wateraid-pumps.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Wateraid-pumps.html">
+                                                        Wateraid Pumps    </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Pinkparty -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Pinkparty.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Pinkparty.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Pinkparty.html">
+                                                        Pinkparty   </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Ruvazh -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Ruvazh.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Ruvazh.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Ruvazh.html">
+                                                        Ruvazh   </a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Tillit Solutions  -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/tillit-solutions.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/tillit-solutions.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/tillit-solutions.html">
+                                                      Tillit Solutions</a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="space-60"></div>
-                            <div class="ot-button text-center">
+                            <!-- <div class="ot-button text-center">
                                 <a href="portfolio-masonry.html" class="octf-btn octf-btn-primary">Load More</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
