update contact page

--- a/case-study-main.html
+++ b/case-study-main.html
@@ -764,6 +764,27 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Indian Music Therapy Treatment  -->
+                                    <div class="project-item technology ideas">
+                                        <div class="projects-box">
+                                            <div class="projects-thumbnail">
+                                                <a href="case-study/Indian-music-therapy-treatment.html">
+                                                <img src="images/projects/720x720/project12-720x720.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="portfolio-info">
+                                                <a class="overlay" href="case-study/Indian-music-therapy-treatment.html"></a>
+                                                <div class="portfolio-info-inner">
+                                                    <h5><a href="case-study/Indian-music-therapy-treatment.html">
+                                                        Indian Music Therapy Treatment</a></h5>
+                                                    <p class="portfolio-cates">
+                                                        <!-- <a href="#">Technology</a><span>/</span> -->
+                                                        <a href="#">Web Development</a>
+                                                    </p> 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
