--- a/contact.html
+++ b/contact.html
@@ -238,38 +238,38 @@
             <section class="contact-page">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6"><br><br>
                             <div class="contact-left">
                                 <div class="ot-heading">
                                     <span>// contact details</span>
                                     <h2 class="main-heading">Contact us</h2>
                                 </div>
                                 <div class="space-5"></div>
-                                <p>Give us a call or drop by anytime, we endeavour to answer all enquiries within 24 hours on business days. We will be happy to answer your questions.</p>
+                                <p>Give us a call or drop by anytime, we endeavour to answer all enquiries within our working hours. We will be happy to answer your questions.</p>
                                 <div class="contact-info box-style1">
                                     <i class="flaticon-world-globe"></i>                    
                                     <div class="info-text">
                                         <h6>Our Address:</h6>
-                                        <p>411 University St, Seattle, USA</p>
+                                        <p>06, First floor, Andal street Sriram nagar Kottaiyur, Karaikudi, Tamil Nadu 630106</p>
                                     </div>
                                 </div>
                                 <div class="contact-info box-style1">
                                     <i class="flaticon-envelope"></i>
                                     <div class="info-text">
                                         <h6>Our Mailbox:</h6>
-                                        <p>engitech@mail.net</p>
+                                        <p>sales@magnion.co.in</p>
                                     </div>
                                 </div>
                                 <div class="contact-info box-style1">
                                     <i class="flaticon-phone-1"></i>
                                     <div class="info-text">
                                         <h6>Our Phone:</h6>
-                                        <p>+1 -800-456-478-23</p>
+                                        <p>7845952209</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6"><br><br>
                             <form id="ajax-form" name="ajax-form" action="contact.php" method="post" class="wpcf7">
                                 <div class="main-form">
                                     <h2>Ready to Get Started?</h2>
@@ -305,7 +305,7 @@
             </section>
             <div class="no-padding">
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86077.66255184308!2d-122.40402224079803!3d47.60810999586645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab3f905c4b1%3A0x96bf575ff75ab1aa!2s411%20University%20St%2C%20Seattle%2C%20WA%2098101%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1584084043716!5m2!1svi!2s" height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15712.086422701066!2d78.7986399!3d10.0973152!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0067328d84da23%3A0x74ba0f7bfbf92112!2sMagnion%20Technology%20Factory!5e0!3m2!1sen!2sin!4v1703223473861!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
