--- a/case-study-main.html
+++ b/case-study-main.html
@@ -251,10 +251,10 @@
                             <div class="project-filter-wrapper">
                                 <ul class="project_filters">
                                     <li><a href="#" data-filter="*" class="selected">All</a></li>
-                                    <li><a href="#" data-filter=".design">Design</a></li>                       
-                                    <li><a href="#" data-filter=".development">Development</a></li>                     
-                                    <li><a href="#" data-filter=".ideas">Ideas</a></li>                     
-                                    <li><a href="#" data-filter=".technology">Technology</a></li>                       
+                                    <li><a href="#" data-filter=".design"> Re-Design</a></li>                       
+                                    <li><a href="#" data-filter=".development">Custom Development</a></li>                     
+                                    <!-- <li><a href="#" data-filter=".ideas">Ideas</a></li>                     
+                                    <li><a href="#" data-filter=".technology">Technology</a></li>                        -->
                                 </ul>
                                 <div class="projects-grid projects-style-1 projects-col3">
                                     <!-- The Country Resort -->
